plugins {
  id 'application'
  id 'jacoco'
  id 'au.com.dius.pact' version '4.7.1'
  id 'com.github.ben-manes.versions' version '0.54.0'
  id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.25'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.owasp.dependencycheck' version '12.2.1'
  id 'org.sonarqube' version '6.3.1.5724'
  id 'org.springframework.boot' version '3.5.14'
  id 'uk.gov.hmcts.java' version '0.12.68'
}

ext {
  set('springCloudVersion', '2025.0.1')
  set('spring-security.version', '6.5.7')
  set('log4j2.version', '2.24.3')
  set('jackson.version', '2.18.2')
  set('snakeyaml.version', '2.3')

  junit               = '5.14.4'
  junitPlatform       = '1.14.4'
  jjwt                = '0.13.0'
  lombokVersion       = '1.18.46'
  pact_version        = '4.7.1'
  appInsightsVersion = '2.6.4'
  reformLogging       = '8.0.0'
  restAssured         = '5.5.7'
  beftaFwVersion      = '9.2.6'
  ccdTestDefinitionVersion = '7.26.3'
}

group = 'uk.gov.hmcts.reform'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

application {
  mainClass.set('uk.gov.hmcts.reform.managecase.Application')
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  contractTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/contractTest/java')
    }
    resources.srcDir file('src/contractTest/resources')
  }

}

tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
}

tasks.withType(Copy).configureEach {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(Test) {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
    systemProperties = System.properties
  }
}

test {
  generateCucumberReports.enabled = true
  failFast = true
}

tasks.register('integration', Test) {
  description = "Runs integration tests"
  group = "Verification"
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  failFast = true
}

tasks.register('smoke', Test) {
  description = "Runs smoke tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath

  generateCucumberReports.enabled = false

  new File("$buildDir/test-results/test").mkdirs()
  copy {
    from "src/functionalTest/resources/DummyTest.xml"
    into "$buildDir/test-results/test"
  }

  doLast {
    generateCucumberReports.enabled = true
    cucumberReports.outputDir = file("${project.buildDir}/reports/tests/befta/smoke")
    cucumberReports.reports = files("${cucumberReports.outputDir}/cucumber.json")
    cucumberReports.notFailingStatuses = ["skipped", "passed"]

    javaexec {
      main = "uk.gov.hmcts.reform.managecase.befta.ManageCaseAssignmentBeftaMain"
      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
      args = [
              '--plugin', "json:${cucumberReports.outputDir}/cucumber.json",
              '--plugin', "junit:${buildDir}/test-results/smoke/cucumber.xml",
              '--tags', '@Smoke and not @Ignore',
              '--glue', 'uk.gov.hmcts.befta.player',
              '--glue', 'uk.gov.hmcts.reform.managecase.befta', 'src/functionalTest/resources/features'
      ]
      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
    }
  }

  outputs.upToDateWhen { false }
}

tasks.register('functional', Test) {
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath

  generateCucumberReports.enabled = false

  doLast {
    generateCucumberReports.enabled = true
    cucumberReports.outputDir = file("${project.buildDir}/reports/tests/befta/functional")
    cucumberReports.reports = files("${cucumberReports.outputDir}/cucumber.json")
    cucumberReports.notFailingStatuses = ["skipped", "passed"]

    def tags = (project.hasProperty('tags')) ? "(${project.property('tags')}) and not @Ignore" : 'not @Ignore'

    javaexec {
      main = "uk.gov.hmcts.reform.managecase.befta.ManageCaseAssignmentBeftaMain"
      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
      args = [
              '--threads', '1',
              '--plugin', "json:${cucumberReports.outputDir}/cucumber.json",
              '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
              '--tags',  "${tags}",
              '--glue', 'uk.gov.hmcts.befta.player',
              '--glue', 'uk.gov.hmcts.reform.managecase.befta', 'src/functionalTest/resources/features'
      ]
      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
      println 'args =' + args
    }
  }

  outputs.upToDateWhen { false }
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required = true
    csv.required = false
    xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
  }
}

project.ext {
  pactVersion = getCheckedOutGitCommitHash()
}

tasks.register('contract', Test) {
  description = 'Runs the consumer Pact tests'
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
  include "uk/gov/hmcts/reform/managecase/api/controller/provider/**"
}

//tasks.register('runProviderPactVerification', Test) {
//  testClassesDirs = sourceSets.contractTest.output.classesDirs
//  classpath = sourceSets.contractTest.runtimeClasspath
//  if (project.hasProperty('pact.verifier.publishResults')) {
//    systemProperty 'pact.verifier.publishResults', project.property('pact.verifier.publishResults')
//  }
//  systemProperty 'pact.provider.version', project.pactVersion
//}
//
//tasks.named('runProviderPactVerification').configure {
//  finalizedBy 'pactVerify'
//}

def getCheckedOutGitCommitHash() {
  'git rev-parse --verify --short HEAD'.execute().text.trim()
}

pact {
  publish {
    pactDirectory = 'pacts'
    pactBrokerUrl = System.getenv("PACT_BROKER_URL") ?: 'http://localhost:80'
    tags = [System.getenv("PACT_BRANCH_NAME") ?:'Dev']
    version = project.pactVersion
  }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport

sonarqube {
  properties {
    property "sonar.projectName", "Reform::manage-case-assignment"
    property "sonar.projectKey", "uk.gov.hmcts.reform:manage-case-assignment"
    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation}"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

apply from: './gradle/suppress.gradle'
dependencyCheck {
  formats = ['HTML', 'XML']
  suppressionFiles = ['config/owasp/suppressions.xml']
}

tasks.register("printSuppressionFile") {
  doLast {
    def suppressionFile = dependencyCheck.getSuppressionFiles()
    if (suppressionFile?.metaClass?.respondsTo(suppressionFile, "getOrNull")) {
      suppressionFile = suppressionFile.getOrNull()
    } else if (suppressionFile?.metaClass?.respondsTo(suppressionFile, "get")) {
      suppressionFile = suppressionFile.get()
    }
    if (suppressionFile instanceof Collection) {
      suppressionFile = suppressionFile.find { it }?.toString()
    }
    println "SUPPRESSION_FILE=${suppressionFile}"
  }
}

ext {
  set('springCloudVersion', '2025.0.0')
  set('spring-framework.version', '6.2.14')
  set('spring-security.version', '6.5.7')
  set('log4j2.version', '2.24.3')
  set('jackson.version', '2.18.2')
  set('snakeyaml.version', '2.3')

  junit               = '6.0.3'
  junitPlatform       = '6.0.3'
  jjwt                = '0.13.0'
  lombokVersion       = '1.18.44'
  pact_version        = '4.6.20'
  reformLogging       = '6.1.9'
  restAssured         = '5.5.7'
  beftaFwVersion      = '9.2.6'
  ccdTestDefinitionVersion = '7.26.4'
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
  }
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    name = "AzureArtifacts"
    url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
  }
}

ext.libraries = [
  junit5: [
    "org.junit.jupiter:junit-jupiter-api:${junit}",
    "org.junit.jupiter:junit-jupiter-engine:${junit}",
    "org.junit.jupiter:junit-jupiter-params:${junit}",
    "org.junit.platform:junit-platform-launcher:${junitPlatform}",
    "org.junit.platform:junit-platform-commons:${junitPlatform}",
    "org.junit.platform:junit-platform-engine:${junitPlatform}",
    "org.junit.platform:junit-platform-launcher:${junitPlatform}",
    "org.apiguardian:apiguardian-api:1.1.2"
  ]
]

dependencies {

  // start::CVE Vulnerability dependency overrides                                                    // MAIN PARENT DEPENDENCY

  // put CVE Vulnerability (sub)dependency overrides here e.g.
  // implementation group: 'com.example', name: 'example-lib', version: '1.0.0' //  parent dependency name

  // end::CVE Vulnerability dependency overrides                                                      // MAIN PARENT DEPENDENCY

  // Spring Deps
  implementation 'org.springframework.boot:spring-boot-properties-migrator'
  implementation 'org.springframework.boot:spring-boot-starter'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-aop'
  implementation 'org.springframework.boot:spring-boot-starter-json'
  implementation 'org.springframework.boot:spring-boot-starter-cache'
  implementation 'org.springframework.boot:spring-boot-starter-hateoas'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
  implementation 'org.springframework.cloud:spring-cloud-starter'
  implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
  implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
  implementation 'org.springframework.cloud:spring-cloud-starter-gateway-mvc'
  implementation 'org.springframework.retry:spring-retry'
  implementation 'org.springframework.security:spring-security-web'
  implementation 'org.springframework.security:spring-security-config'
  implementation 'org.springframework.security:spring-security-rsa:1.1.5'
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17'

  // HMCTS
  implementation 'com.github.hmcts:idam-java-client:3.0.5'
  implementation 'com.github.hmcts:service-auth-provider-java-client:5.3.4'
  implementation "com.github.hmcts.java-logging:logging:${reformLogging}"
  implementation 'uk.gov.service.notify:notifications-java-client:6.0.0-RELEASE'

  implementation 'com.auth0:java-jwt:4.5.2'
  implementation 'com.github.ben-manes.caffeine:caffeine:3.2.4'
  implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'
  implementation "io.jsonwebtoken:jjwt-api:${jjwt}"
  runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwt}"
  runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwt}"
  implementation 'io.projectreactor:reactor-core:3.8.5'
  implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
  implementation 'pl.jalokim.propertiestojson:java-properties-to-json:5.3.0'
  implementation 'net.logstash.logback:logstash-logback-encoder:9.0'
  implementation 'org.apache.httpcomponents.client5:httpclient5:5.5.1'
  implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.8'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
  implementation 'org.modelmapper:modelmapper:3.2.6'
  implementation "org.projectlombok:lombok:${lombokVersion}"
  annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
  implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
  implementation 'org.reactivestreams:reactive-streams:1.0.4'
  implementation "com.microsoft.azure:applicationinsights-logging-logback:${appInsightsVersion}"
  implementation "com.microsoft.azure:applicationinsights-spring-boot-starter:${appInsightsVersion}"


  testImplementation libraries.junit5
  testImplementation "com.github.hmcts:befta-fw:${beftaFwVersion}"
  testImplementation "com.github.hmcts:ccd-test-definitions:${ccdTestDefinitionVersion}"
  testImplementation 'com.github.hmcts:fortify-client:1.4.10:all'
  testImplementation "io.rest-assured:rest-assured:${restAssured}"
  testImplementation "io.rest-assured:json-path:${restAssured}"
  testImplementation "io.rest-assured:xml-path:${restAssured}"
  testImplementation 'nl.jqno.equalsverifier:equalsverifier:4.5'
  testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
  testImplementation 'org.mockito:mockito-core:5.23.0'
  testImplementation 'org.mockito:mockito-subclass:5.23.0'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
  testImplementation 'com.google.guava:guava:33.6.0-jre' // For BEFTA

  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath

  contractTestImplementation sourceSets.main.runtimeClasspath
  contractTestImplementation sourceSets.test.runtimeClasspath
  contractTestImplementation "au.com.dius.pact.consumer:junit5:${pact_version}"
  contractTestRuntimeOnly "au.com.dius.pact.consumer:junit5:${pact_version}"
  contractTestImplementation "au.com.dius.pact.provider:junit5:${pact_version}"
  contractTestImplementation "au.com.dius.pact.provider:spring:${pact_version}"
  contractTestImplementation "au.com.dius.pact.provider:junit5spring:${pact_version}"
  contractTestImplementation "org.projectlombok:lombok:${lombokVersion}"
  contractTestAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

}

bootJar {
  getArchiveFileName().set(provider {
    'manage-case-assignment.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}

tasks.register('fortifyScan', JavaExec) {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

tasks.register('reloadEnvSecrets') {
  doFirst {
    def env = project.findProperty('env') ?: 'demo'
    if (project.file("./.${env}-remote-env").exists()) {
      project.file("./.${env}-remote-env").delete()
    }
  }
}

tasks.register('runRemoteDemo', JavaExec) {
  mainClass = application.mainClass
  classpath = sourceSets.main.runtimeClasspath
  doFirst() {
    configRemoteRunTask(it, 'demo')
  }
}

void configRemoteRunTask(Task execTask, String env) {
  loadEnvSecrets(env)
  project.file("./.${env}-remote-env").readLines().each() {
    def index = it.indexOf("=")
    def key = it.substring(0, index)
    def value = it.substring(index + 1)
    execTask.environment(key, value)
  }
}

void loadEnvSecrets(String env) {
  def azCmd = ['az', 'keyvault', 'secret', 'show', '--vault-name', "ccd-${env}", '-o', 'tsv', '--query', 'value', '--name', 'manage-case-assignment-remote-env']
  if (!project.file("./.${env}-remote-env").exists()) {
    new ByteArrayOutputStream().withStream { os ->
      exec {
        if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
          commandLine ['cmd', '/c'] + azCmd
        } else {
          commandLine azCmd
        }
        standardOutput = os
      }
      project.file("./.${env}-remote-env").write(new String(os.toString().replace('\n', '').decodeBase64(), java.nio.charset.StandardCharsets.UTF_8))
    }
  }
}
